Bug 725568 - Maintenance service can crashes after applying updates. r=rstrong